--- a/packages/slate/package.json
+++ b/packages/slate/package.json
@@ -18,6 +18,7 @@
     "esrever": "^0.2.0",
     "is-plain-object": "^2.0.4",
     "lodash": "^4.17.4",
+    "memoize-one": "^4.0.0",
     "slate-dev-warning": "^0.0.1",
     "type-of": "^2.0.1"
   },
